--- a/print.html
+++ b/print.html
@@ -91,7 +91,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="chapter_1.html"><strong aria-hidden="true">1.</strong> Chapter 1</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> 引言</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -157,7 +157,13 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#chapter-1" id="chapter-1">Chapter 1</a></h1>
+                        <h1><a class="header" href="#easter-mips" id="easter-mips">Easter MIPS</a></h1>
+<ul>
+<li>易璐 <a href="mailto:yilu@bupt.edu.cn">yilu@bupt.edu.cn</a></li>
+<li>谢云龙 <a href="mailto:makiras@bupt.edu.cn">makiras@bupt.edu.cn</a></li>
+<li>徐逸辰 <a href="mailto:linyxus@bupt.edu.cn">linyxus@bupt.edu.cn</a></li>
+</ul>
+<p>这道题我真的做不队 @ NSCSCC 2020</p>
 
                     </main>
 
