--- a/index.html
+++ b/index.html
@@ -155,13 +155,15 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#easter-mips" id="easter-mips">Easter MIPS</a></h1>
+                        <h1><a class="header" href="#eastermips" id="eastermips">EasterMIPS</a></h1>
 <ul>
 <li>易璐 <a href="mailto:yilu@bupt.edu.cn">yilu@bupt.edu.cn</a></li>
 <li>谢云龙 <a href="mailto:makiras@bupt.edu.cn">makiras@bupt.edu.cn</a></li>
 <li>徐逸辰 <a href="mailto:linyxus@bupt.edu.cn">linyxus@bupt.edu.cn</a></li>
 </ul>
 <p>这道题我真的做不队 @ NSCSCC 2020</p>
+<p>EasterMIPS 项目为北京邮电大学“这道题我真的做不队”在 <a href="http://www.nscscc.org/">NSCSCC 2020</a> 中获决赛一等奖的参赛作品。</p>
+<p>本项目中，我们开源了决赛提交的CPU核、在开发过程中实现的多个MIPS Cache、uCore系统以及示例程序的有关代码。</p>
 
                     </main>
 
